# ChangeLog for dev-lang/ferite
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ferite/ChangeLog,v 1.28 2008/10/29 11:23:14 flameeyes Exp $

  29 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> ferite-1.0.2.ebuild:
  Force -j1, see bug #244871.

  29 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  -ferite-0.99.6.ebuild:
  clean up

  29 Jan 2008; Christian Faulhammer <opfer@gentoo.org> ferite-1.0.2.ebuild:
  quote variables

  29 Jan 2008; Christian Faulhammer <opfer@gentoo.org> ferite-1.0.2.ebuild:
  stable amd64, bug 204382

  28 Aug 2007; Christoph Mende <angelos@gentoo.org> ferite-1.0.2.ebuild:
  Fixed multilib paths

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  22 Apr 2007; Matti Bickel <mabi@gentoo.org> ferite-1.0.2.ebuild:
  ppc stable (bug #169458)

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> ferite-1.0.2.ebuild:
  keyworded ~amd64, fixed multilib issues, bug 169458

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> ferite-1.0.2.ebuild:
  x86 stable

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> ferite-1.0.2.ebuild:
  Stable on sparc wrt #169458

*ferite-1.0.2 (05 Mar 2007)

  05 Mar 2007; Anant Narayanan <anant@gentoo.org> +ferite-1.0.2.ebuild:
  vBump to 1.0.2, ebuild thanks to Dean Baender. Closes bug #124197

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -ferite-0.99.4.ebuild,
  -ferite-0.99.5.ebuild:
  QA: Removed unused versions.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> ferite-0.99.6.ebuild:
  Stable on ppc.

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> ferite-0.99.6.ebuild:
  stable on amd64

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> ferite-0.99.4.ebuild,
  ferite-0.99.5.ebuild, ferite-0.99.6.ebuild:
  virtual/glibc -> virtual/libc
