@@ -1,4 +1,4 @@
 DIST ferite-1.0.2.tar.gz 2039452 RMD160 3eb8fe2bbd66f188bd7aae92e7e48922e698a3ad SHA1 a0ab83b33d28d59fe0ff2b532ebbc42224df3461 SHA256 c67fc25451070214334ba2b1ca3a9ea78f5ed79f322e62ebf8fc9462bfe0fb8e
-EBUILD ferite-1.0.2.ebuild 1754 RMD160 7a871ea8559357a5f4b99f0e40893ddb5f22f2be SHA1 6c82765cadb084fe0c424077200593409e892a92 SHA256 24fe2abfd93f56c9043b4bfc5a51da0e98655ac074f28e3da99e6374ae3cfe6e
-MISC ChangeLog 2991 RMD160 72891cbd523ee4ada0ed0c777487d225a52d3359 SHA1 a4cfed325817997baac6e541f558b623d2452f41 SHA256 d0f5ad0e8913d1c943318cc8dc3cf61ee93d024551572125cb22d20891dcaf4b
+EBUILD ferite-1.0.2.ebuild 1738 RMD160 cad289d9dfa3d94c1215c57b6824f5bc1371fb7d SHA1 7ac711de6765962df771376401416b849627ae4d SHA256 a7e8ce0c06cf4a25f618cc4b6a52e5791f1c3ca651452c979599a3a056f22f21
+MISC ChangeLog 3083 RMD160 c09c8482cf72871dc57cbaa0d0b80bc3abc39d99 SHA1 b2de99ace24d1689f05f278549971a173feaf613 SHA256 7d9bed9ec5a084893245ca3e6dffb0731c548c20566e7d0e4112d2a92fadeadf
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
