@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/ferite
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ferite/ChangeLog,v 1.28 2008/10/29 11:23:14 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ferite/ChangeLog,v 1.29 2009/09/23 16:50:17 patrick Exp $
+
+  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> ferite-1.0.2.ebuild:
+  Remove virtual/libc
 
   29 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> ferite-1.0.2.ebuild:
   Force -j1, see bug #244871.
